<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Questioner</string>
    <string name="next">Siguiente</string>
    <string name="previous">Atrás</string>
    <string name="continue_">Continuar</string>
    <string name="information_fragment_label">Estimado profesional</string>
    <string name="information">Con motivo de una investigación que se lleva a cabo, a fin de adaptar y validar un cuestionario para identificar conductas agresivas en escolares de primaria, solicitamos que responda el presente cuestionario. La información brindada por usted, en calidad de especialista, será de gran valor para el análisis y posible modificación de la propuesta.



    Muchas gracias por su colaboración. </string>
    <string name="questioner_fragment_label">Cuestionario 1</string>
    <string name="questioner2_fragment_label">Cuestionario 2</string>
    <string name="professional_data_fragment_label">Datos del Especialista</string>
    <string name="action_settings">Ajustes</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="accept">Aceptar</string>
    <string name="congratulations">Felicidades. Acabaste de completar el cuestionario.</string>
    <string name="question">A su consideración, ¿existe necesidad de la existencia de instrumentos para identificar conductas agresivas en escolares primarios?</string>
    <string name="behavior_question_fragment">Antes de comenzar</string>
    <string name="congratulations_bottom_text">Esperamos que haya sido un viaje agradable y hayas aprendido cosas interesantes. Gracias por ayudarnos en nuestra misión.</string>
    <string name="home_fragment_label">Questioner</string>
    <string name="is_victim"><![CDATA[Tras analizar la encuesta se puede concluir que existe <b>agresividad</b> desde el entorno para con el niño, ya que una/s de las preguntas <b>6, 7, 9, 12, 13, 14</b> fue/ron contestada/s afirmativa/s.]]></string>
    <string
        name="is_not_victim"><![CDATA[Tras analizar la encuesta se puede concluir que no existe <b>agresividad</b> o que no ha sido víctima, ya que las preguntas <b>6, 7, 9, 12, 13, 14</b> no están seleccionadas.]]></string>
    <string name="is_aggressor"><![CDATA[Tras analizar la encuesta se puede concluir que existe <b>agresividad</b>, ya que presenta respuestas afirmativas en alguna/s de las preguntas <b>5, 6, 7, 8, 10, 12, 13, 14</b>. Se necesita observación.]]></string>
    <string name="is_not_aggressor"><![CDATA[Tras analizar la encuesta se puede concluir que no existe <b>agresividad</b> o que no ha sido victimario, ya que ninguna de las preguntas <b>5, 6, 7, 8, 10, 12, 13, 14</b> ha sido seleccionada como afirmativa.]]></string>
    <string name="report_fragment_label">Reporte</string>

    <string-array name="sex_options">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>